# ICE-3111-CV

./: README.md
Labs/: README.md
Labs/Lab-00/: README.md
Labs/Lab-01/: README.md  questionnaire.docx  questionnaire.md
Labs/Lab-02/: README.md  questionnaire.docx  questionnaire.md
Labs/Lab-03/: .gitignore  C-CXX.md  Python.md  README.md  questionnaire.docx  questionnaire.md
Labs/Lab-04/: README.md
Labs/Lab-05/: C-CXX.md  Python.md  README.md  questionnaire.docx  questionnaire.md
Labs/Lab-06/: .gitignore  C-CXX.md  CMakeLists.txt  Python.md  README.md  questionnaire.docx  questionnaire.md
Labs/Lab-07/: C-CXX.md  Python.md  README.md  questionnaire.docx  questionnaire.md
Labs/Lab-08/: README.md
Labs/Lab-09/: .gitignore  C-CXX.md  Python.md  README.md  panorama.drawio  questionnaire.docx  questionnaire.md
Lectures/: README.md  includeLibraries.h
Lectures/Week03-Point_Operators/: 1-image_compositing.ipynb
Lectures/Week05-Edge_n_line_detection/: README.md  hough_transform.cxx  sobel_image.cxx
Lectures/Week05-Edge_n_line_detection/notebooks/: 1-Edge-detection-using-gradient-magnitude.ipynb  1-python-Edge-detection-using-gradient-magnitude.ipynb  2-Edge-detection-using-canny.ipynb  2-python-Edge-detection-using-canny.ipynb  3-line-detection-using-hough-transform.ipynb  3-python-line-detection-using-hough-transform.ipynb  4-python-straighten-image-using-hough-transform.ipynb  4-straighten-image-using-hough-transform.ipynb  environment.yml
Lectures/Week07-Segmentation/notebooks/: 1-opencv-cxx-load-display.ipynb  1-opencv-python-load-display.ipynb  2-segmentation-of-cells-using-opencv-cxx.ipynb  2-segmentation-of-cells-using-opencv-python.ipynb  3-region-growing-opencv-cxx.ipynb  3-region-growing-opencv-python.ipynb  4-segmentation-of-birds-python.ipynb
Lectures/Week08-Motion_Detection/: 1-How_to_use_webcam_using_OpenCV-cxx.ipynb  1-How_to_use_webcam_using_OpenCV-python.ipynb  2-Basic_Background_Subtraction-cxx.ipynb  2-Basic_Background_Subtraction-python.ipynb
Lectures/Week09-Feature_detection/: 1-detect-describe-match-using-ORB-in-opencv-python.ipynb  2-with-a-webcam-python.ipynb  3-good-bad-features-CPP.ipynb  3-good-bad-features-python.ipynb  4-auto-correlation_function-python.ipynb
Lectures/Week11-Object_recognition/: 1-template_matching-cxx.ipynb  1-template_matching-python.ipynb  2-template_matching-cxx.ipynb  2-template_matching-python.ipynb  3-template_matching-cxx.ipynb  3-template_matching-python.ipynb  4-template_matching-cxx.ipynb  4-template_matching-python.ipynb
mindmap/: README.md  csv2json.py  network.csv  network.html  network.json  network.ods  node-link.js  run.sh
mindmap/Week-01/: README.md  network.csv  network.html  network.json  node-link.js
mindmap/Week-02/: README.md  network.css  network.csv  network.html  network.json
mindmap/Week-03/: README.md  network.css  network.csv  network.html  network.json  node-link.js
mindmap/Week-04/: README.md  network.css  network.csv  network.html  network.json  run.sh
mindmap/Week-05/: README.md  network.csv  network.html  network.json  node-link.js
mindmap/Week-07/: README.md  network.csv  network.html  network.json
mindmap/Week-08/: README.md  network.csv  network.html  network.json
mindmap/Week-09/: README.md  network.csv  network.html
mindmap/Week-10/: README.md  network.csv  network.html  network.json
